[gd_scene load_steps=11 format=3 uid="uid://ddj0cj85o2e2y"]

[ext_resource type="PackedScene" uid="uid://dtvqyc34g0n52" path="res://Scenes/Player/player.tscn" id="1_hand0"]
[ext_resource type="Script" path="res://Scenes/Levels/Level01/Level01tscn.gd" id="1_qoov8"]
[ext_resource type="PackedScene" uid="uid://bur4gce4cb4p3" path="res://Scenes/Level01 tilemap/level_tile_set.tscn" id="2_c2giq"]
[ext_resource type="PackedScene" uid="uid://2qac47tfb0q3" path="res://Scenes/UI/user_interface.tscn" id="3_v54xb"]
[ext_resource type="Script" path="res://Scenes/Levels/Test Level/GameCountdownTimer.gd" id="4_2g4xm"]
[ext_resource type="Script" path="res://Scenes/Levels/Test Level/DeliverySystem.gd" id="6_glxm8"]
[ext_resource type="PackedScene" uid="uid://bbk50naeyyv56" path="res://Scenes/Levels/Level components/Delivery Spawn/DeliverySpawn.tscn" id="7_kautg"]
[ext_resource type="PackedScene" uid="uid://dusg6jon1ohfk" path="res://Scenes/Levels/Level components/DeliveryPoint/DeliveryPoint.tscn" id="8_jebus"]
[ext_resource type="PackedScene" uid="uid://btw6cav5nog8a" path="res://Scenes/Levels/Level components/EnemySpawner/EnemySpawner.tscn" id="9_xgw1j"]
[ext_resource type="AudioStream" uid="uid://cgelag8v7581p" path="res://Audio/Music/8-bit_slay_the_evil.ogg" id="10_cshap"]

[node name="Level01" type="Node2D"]
script = ExtResource("1_qoov8")
metadata/_edit_horizontal_guides_ = [-210.0, 770.0]
metadata/_edit_vertical_guides_ = [-577.0, 946.0]

[node name="LevelTileSet" parent="." instance=ExtResource("2_c2giq")]

[node name="Player" parent="." instance=ExtResource("1_hand0")]
speed = 365
braking = -330
max_speed_reverse = 380

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-1.17655e-07, 6.10352e-05)
zoom = Vector2(2, 2)
process_callback = 0
limit_left = -576
limit_top = -210
limit_right = 946
limit_bottom = 770
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]

[node name="User_Interface" parent="Player/CanvasLayer" instance=ExtResource("3_v54xb")]
metadata/_edit_vertical_guides_ = [8.0, 1144.0]
metadata/_edit_horizontal_guides_ = [16.0]

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(6, 56)
scale = Vector2(0.927746, 0.155605)

[node name="GameCountdownTimer" type="Timer" parent="."]
script = ExtResource("4_2g4xm")
defaultTimer = 30.0
deliveryBonusTime = 15.0

[node name="Delivery_System" type="Node" parent="." groups=["DeliverySystem"]]
script = ExtResource("6_glxm8")

[node name="DeliverySpawn" parent="Delivery_System" groups=["DeliverySystem"] instance=ExtResource("7_kautg")]
position = Vector2(84, -3)

[node name="delivery_point" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(500, -95)
scale = Vector2(0.5, 0.5)

[node name="delivery_point2" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(651, 400)
scale = Vector2(0.5, 0.5)

[node name="delivery_point3" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(-220, -122)
scale = Vector2(0.5, 0.5)

[node name="delivery_point4" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(164, 655)
scale = Vector2(0.5, 0.5)

[node name="delivery_point5" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(-472, -53)
scale = Vector2(0.5, 0.5)

[node name="delivery_point6" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(-423, 648)
scale = Vector2(0.5, 0.5)

[node name="delivery_point7" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(-455, 321)
scale = Vector2(0.5, 0.5)

[node name="delivery_point8" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(159, 291)
scale = Vector2(0.5, 0.5)

[node name="delivery_point9" parent="Delivery_System" groups=["DeliveryPoints", "DeliverySystem"] instance=ExtResource("8_jebus")]
position = Vector2(794, 44)
scale = Vector2(0.5, 0.5)

[node name="EnemySpawner" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(272, 9)

[node name="EnemySpawner8" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(-449, 177)

[node name="EnemySpawner11" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(790, 59)

[node name="EnemySpawner9" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(601, 108)

[node name="EnemySpawner10" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(591, -52)

[node name="EnemySpawner7" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(611, 301)

[node name="EnemySpawner6" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(66, 656)

[node name="EnemySpawner4" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(-364, 651)

[node name="EnemySpawner5" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(628, 487)

[node name="EnemySpawner2" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(-214, 5)

[node name="EnemySpawner3" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(-21, 295)

[node name="EnemySpawner12" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(-201, 300)

[node name="EnemySpawner13" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(-452, -33)

[node name="EnemySpawner14" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(-365, 454)

[node name="EnemySpawner15" parent="." groups=["EnemySpawners"] instance=ExtResource("9_xgw1j")]
position = Vector2(382, 406)

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_cshap")
volume_db = -11.702

[connection signal="healthChanged" from="Player" to="Player/CanvasLayer/User_Interface" method="_on_player_health_changed"]
[connection signal="packageDelivered" from="Player" to="GameCountdownTimer" method="_on_player_package_delivered"]
[connection signal="playerDead" from="Player" to="." method="_on_player_player_dead"]
[connection signal="player_global_position" from="Player" to="Player/CanvasLayer/User_Interface" method="_on_player_player_global_position"]
[connection signal="retry" from="Player/CanvasLayer/User_Interface" to="." method="_on_user_interface_retry"]
[connection signal="timeout" from="GameCountdownTimer" to="." method="_on_game_countdown_timer_timeout"]
[connection signal="navigationTarget" from="Delivery_System" to="Player/CanvasLayer/User_Interface" method="_on_delivery_system_navigation_target"]
[connection signal="deliveryPointSelect" from="Delivery_System/DeliverySpawn" to="Delivery_System" method="_on_delivery_spawn_delivery_point_select"]
[connection signal="navigationTargetSpawn" from="Delivery_System/DeliverySpawn" to="Player/CanvasLayer/User_Interface" method="_on_delivery_spawn_navigation_target_spawn"]
